--- a/packar/package.json
+++ b/packar/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@jest/globals": "^29.7.0",
         "axios": "^1.8.3",
-        "dotenv": "^16.4.7"
+        "dotenv": "^16.4.7",
+        "log4js": "^6.9.1"
     }
 }
