--- a/imdata/example.env
+++ b/imdata/example.env
@@ -6,24 +6,27 @@ BASE_URL=
 
 USER_IMATIA_ADMIN_EMAIL=
 USER_IMATIA_ADMIN_PASS=
-USER_IMATIA_ADMIN_ROL=
+USER_IMATIA_ADMIN_ROLE=
 USER_IMATIA_ADMIN_TENANTS=
 USER_IMATIA_ADMIN_MAIN_TENANT=
+USER_IMATIA_ADMIN_DISPLAY_NAME=
 
-USER_ADMIN_EMAIL=
-USER_ADMIN_PASS=
-USER_ADMIN_ROL=
-USER_ADMIN_TENANTS=
-USER_ADMIN_MAIN_TENANT=
+USER_DS_ADMIN_EMAIL=
+USER_DS_ADMIN_PASS=
+USER_DS_ADMIN_ROLE=
+USER_DS_ADMIN_TENANTS=
+USER_DS_ADMIN_MAIN_TENANT=
+USER_DS_ADMIN_DISPLAY_NAME=
 
 USER_ONE_EMAIL=
 USER_ONE_PASS=
-USER_ONE_ROL=
+USER_ONE_ROLE=
 USER_ONE_TENANTS=
 USER_ONE_MAIN_TENANT=
+USER_ONE_DISPLAY_NAME=
 
-USER_MAIN_EMAIL=
-USER_MAIN_PASS=
-USER_MAIN_ROL=
-USER_MAIN_TENANTS=
-USER_MAIN_MAIN_TENANT=
+DATASOURCE_URL=
+DATASOURCE_PORT=
+DATASOURCE_USERNAME=
+DATASOURCE_PASS=
+DATASOURCE_DS_TYPE=
