--- a/imdata/.prettierrc
+++ b/imdata/.prettierrc
@@ -3,5 +3,6 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "printWidth": 120,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "plugins": ["prettier-plugin-organize-imports"]
 }
