--- a/imdata/package.json
+++ b/imdata/package.json
@@ -18,7 +18,8 @@
         "@types/node": "^22.13.10",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-prettier": "^5.2.3",
-        "prettier": "^3.5.3"
+        "prettier": "^3.5.3",
+        "prettier-plugin-organize-imports": "^4.1.0"
     },
     "dependencies": {
         "@jest/globals": "^29.7.0",
