--- a/packar/example.env
+++ b/packar/example.env
@@ -14,14 +14,17 @@ USER_DEMO_PASS=
 USER_COURIER_NAME=
 USER_COURIER_PROVIDER_NAME=
 USER_COURIER_PASS=
+USER_COURIER_DRIVERS=
 
 USER_COURIER_NAME_NO_FIXED_PRICE=
 USER_COURIER_PROVIDER_NAME_NO_FIXED_PRICE=
 USER_COURIER_PASS_NO_FIXED_PRICE=
+USER_COURIER_NO_FIXED_PRICE_DRIVERS=
 
 USER_COURIER_NAME_FIXED_PRICE=
 USER_COURIER_PROVIDER_NAME_FIXED_PRICE=
 USER_COURIER_PASS_FIXED_PRICE=
+USER_COURIER_FIXED_PRICE_DRIVERS=
 
 PICKUP_LOCATION=
 DESTINATION_FAVORITE=
