--- a/packar/example.env
+++ b/packar/example.env
@@ -1,12 +1,20 @@
 # ------------------ DEV ------------------
 
 ENVIRONMENT=dev
+TIMEOUT=800
 
 BASE_URL=
 CORE_BASE_URL=
 
 USER_ADMIN_NAME=
 USER_ADMIN_PASS=
+
+PICKUP_LOCATION=
+DESTINATION_FAVORITE=
+PICKUP_LOCATION_SECONDARY=
+
+DEFAULT_NO_TRADITIONAL_COURIER=
+DEFAULT_NO_TRADITIONAL_SERVICE=
 
 USER_DEMO_NAME=
 USER_DEMO_PASS=
@@ -24,8 +32,4 @@ USER_COURIER_NO_FIXED_PRICE_DRIVERS=
 USER_COURIER_NAME_FIXED_PRICE=
 USER_COURIER_PROVIDER_NAME_FIXED_PRICE=
 USER_COURIER_PASS_FIXED_PRICE=
-USER_COURIER_FIXED_PRICE_DRIVERS=
-
-PICKUP_LOCATION=
-DESTINATION_FAVORITE=
-PICKUP_LOCATION_SECONDARY=
+USER_COURIER_FIXED_PRICE_DRIVERS='{"driverNames":["abc","def"],"vehicleRegisters":["ghi","jkl"]}'
